fixed css side menu and overflow

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@ body {
 	font-family: 'Nunito', sans-serif;
 	color: var(--text-color);
 	line-height: 1.6;
-	overflow: overlay;
 	background-clip: border-box;
 }
 
@@ -121,9 +120,11 @@ input[type='number']::-webkit-outer-spin-button {
 	-webkit-transition: 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
 	-o-transition: 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
 	transition: 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
+	color: var(--text-color);
 }
 
 .sidebar-menu {
+	background-color: var(--text-dark-color);
 	display: -webkit-box;
 	display: -ms-flexbox;
 	display: flex;
@@ -141,8 +142,13 @@ input[type='number']::-webkit-outer-spin-button {
 	text-align: center;
 }
 
+.sidebar li {
+	padding: 0.5em;
+}
+
+
 .sidebar a {
-	color: var(--text-dark-color);
+	color: var(--text-color);
 	font-size: 1.3rem;
 	font-weight: bold;
 }
@@ -150,7 +156,7 @@ input[type='number']::-webkit-outer-spin-button {
 .sidebar-close-btn {
 	position: fixed;
 	top: 16px;
-	right: -20px;
+	right: -40px;
 	-webkit-transition: 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
 	-o-transition: 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
 	transition: 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
@@ -276,9 +282,8 @@ path {
 }
 
 .stats-heading {
-	max-width: 500px;
+	width: max-content;
 	margin: auto;
-	font-size: 2rem;
 }
 
 .stats i {
@@ -581,7 +586,7 @@ path {
 
 /* Footer */
 .footer {
-	background-color: var(--primary-color);
+	background-color: var(--secondary-color);
 }
 .footer .social a {
 	margin: 0 10px;
@@ -744,7 +749,6 @@ path {
 	}
 
 	.stats-heading {
-		font-size: 1.4rem;
 	}
 
 	.questions-heading {
